impls/strategy/src/snapshots/hopr_strategy__non_anonymous_pix__tests__private_key_recovered_without_xdai_funds_gas_from_safe.snap
---
source: impls/strategy/src/non_anonymous_pix.rs
assertion_line: 1549
expression: "*snapshot.refresh()"
---
accounts:
  0:
    chain_key: 18f8ae833c85c51fbeba29cef9fbfb53b3bad950
    keyid: 0
    multi_addresses: []
    packet_key: d6affd9ecd20b4fa1ea3fe65162604f01bc8fb859bb8a079b9e70be10eba15a6
    safe_address: 93534e8ca82510a346dd329115ce7aefd4d35583
  1:
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    keyid: 1
    multi_addresses: []
    packet_key: c443eb7d2eb0c95b3fe8ade2a75b7ea008087b5fe22843557273688d1e4d4f22
    safe_address: 259bed99d230648d7c8a116af59abdd15c9f4f1e
  2:
    chain_key: b6021e0860dd9d96c9ff0a73e2e5ba3a466ba234
    keyid: 2
    multi_addresses: []
    packet_key: 8994396d4907dc5e18e209cf958f001afe8f04d7dc1b3a4fd0f9086ee8c610b7
    safe_address: 0f944bc36fdcf97fff6807174eeb839ecd6035bd
  3:
    chain_key: d0b6d7e7d79e7225bf54e299472c89b3b31734b6
    keyid: 3
    multi_addresses: []
    packet_key: 6a4396aefd73a6fc116eeb85cdb14a12d9787988cb0948eb1e3d15e6480583c4
    safe_address: cc2cafc885aca4045b9bc686539e8aea656162cc
native_balances:
  18f8ae833c85c51fbeba29cef9fbfb53b3bad950:
    __typename: NativeBalance
    balance: 0 xDai
  93534e8ca82510a346dd329115ce7aefd4d35583:
    __typename: NativeBalance
    balance: 0 xDai
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: NativeBalance
    balance: 1.989999999999999998 xDai
  259bed99d230648d7c8a116af59abdd15c9f4f1e:
    __typename: NativeBalance
    balance: 0 xDai
  b6021e0860dd9d96c9ff0a73e2e5ba3a466ba234:
    __typename: NativeBalance
    balance: 0 xDai
  0f944bc36fdcf97fff6807174eeb839ecd6035bd:
    __typename: NativeBalance
    balance: 0 xDai
  d0b6d7e7d79e7225bf54e299472c89b3b31734b6:
    __typename: NativeBalance
    balance: 0.009999999999999999 xDai
  cc2cafc885aca4045b9bc686539e8aea656162cc:
    __typename: NativeBalance
    balance: 0 xDai
token_balances:
  18f8ae833c85c51fbeba29cef9fbfb53b3bad950:
    __typename: HoprBalance
    balance: 0 wxHOPR
  93534e8ca82510a346dd329115ce7aefd4d35583:
    __typename: HoprBalance
    balance: 1000 wxHOPR
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: HoprBalance
    balance: 50 wxHOPR
  259bed99d230648d7c8a116af59abdd15c9f4f1e:
    __typename: HoprBalance
    balance: 1000 wxHOPR
  b6021e0860dd9d96c9ff0a73e2e5ba3a466ba234:
    __typename: HoprBalance
    balance: 0 wxHOPR
  0f944bc36fdcf97fff6807174eeb839ecd6035bd:
    __typename: HoprBalance
    balance: 1000 wxHOPR
  d0b6d7e7d79e7225bf54e299472c89b3b31734b6:
    __typename: HoprBalance
    balance: 0 wxHOPR
  cc2cafc885aca4045b9bc686539e8aea656162cc:
    __typename: HoprBalance
    balance: 1000 wxHOPR
safe_allowances:
  93534e8ca82510a346dd329115ce7aefd4d35583:
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
  259bed99d230648d7c8a116af59abdd15c9f4f1e:
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
  0f944bc36fdcf97fff6807174eeb839ecd6035bd:
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
  cc2cafc885aca4045b9bc686539e8aea656162cc:
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
deployed_safes:
  93534e8ca82510a346dd329115ce7aefd4d35583:
    address: 93534e8ca82510a346dd329115ce7aefd4d35583
    chain_key: 18f8ae833c85c51fbeba29cef9fbfb53b3bad950
    owners:
      - 18f8ae833c85c51fbeba29cef9fbfb53b3bad950
    module_address: c2ac223dbf64edf995c70c5a3d5599c3fb6d6291
    registered_nodes: []
    threshold: "1"
  259bed99d230648d7c8a116af59abdd15c9f4f1e:
    address: 259bed99d230648d7c8a116af59abdd15c9f4f1e
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    owners:
      - bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    module_address: ff263744a4621e2cac0f4882cc623bee3c9aef8d
    registered_nodes:
      - bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    threshold: "1"
  0f944bc36fdcf97fff6807174eeb839ecd6035bd:
    address: 0f944bc36fdcf97fff6807174eeb839ecd6035bd
    chain_key: b6021e0860dd9d96c9ff0a73e2e5ba3a466ba234
    owners:
      - b6021e0860dd9d96c9ff0a73e2e5ba3a466ba234
    module_address: 1613d5898cae268775bb85aa0b7e6e7fbc9dcd47
    registered_nodes: []
    threshold: "1"
  cc2cafc885aca4045b9bc686539e8aea656162cc:
    address: cc2cafc885aca4045b9bc686539e8aea656162cc
    chain_key: d0b6d7e7d79e7225bf54e299472c89b3b31734b6
    owners:
      - d0b6d7e7d79e7225bf54e299472c89b3b31734b6
    module_address: 10a28ffa18daae2b35281b487b4086ae07e1cb4b
    registered_nodes: []
    threshold: "1"
safe_redeem_stats: {}
tx_counts:
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb: 2
  d0b6d7e7d79e7225bf54e299472c89b3b31734b6: 1
channels: {}
chain_info:
  channel_closure_grace_period: "300"
  channel_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  block_number: 1
  chain_id: 31337
  gas_price: "1000000000"
  ledger_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  max_fee_per_gas: "3000000000"
  max_priority_fee_per_gas: "100000000"
  min_ticket_winning_probability: 1
  key_binding_fee: 0.01 wxHOPR
  safe_registry_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  ticket_price: 1 wxHOPR
  network: anvil-localhost
  contract_addresses: "[contract_addresses]"
  expected_block_time: "5"
  finality: "3"
version: "1"
health: OK
active_txs: {}
